--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.77"
 bpaf = { version = "0.9.8", features = ["autocomplete", "docgen", "bright-color", "derive"] }
+url = "2.5.0"
 xshell = "0.2.5"
